syntax = "proto3";
package specs;

option go_package = "github.com/siderolabs/omni/client/api/omni/specs";

message CurrentUserSpec {
  string identity = 1;
  reserved 2;
  string role = 3;
}

message PermissionsSpec {
  bool can_read_clusters = 1;
  bool can_create_clusters = 2;
  bool can_manage_users = 3;
  bool can_read_machines = 4;
  bool can_remove_machines = 5;
  bool can_read_machine_logs = 6;
  bool can_read_machine_config_patches = 9;
  bool can_manage_machine_config_patches = 10;
  bool can_manage_backup_store = 11;
  bool can_access_maintenance_nodes = 12;
}

message ClusterPermissionsSpec {
  bool can_add_machines = 1;
  bool can_remove_machines = 2;
  bool can_reboot_machines = 3;
  bool can_update_kubernetes = 4;
  bool can_download_kubeconfig = 5;
  bool can_sync_kubernetes_manifests = 6;
  bool can_update_talos = 7;
  bool can_download_talosconfig = 8;
  bool can_read_config_patches = 9;
  bool can_manage_config_patches = 10;
  bool can_manage_cluster_features = 11;
  bool can_download_support_bundle = 12;
}

message LabelsCompletionSpec {
  message Values {
    repeated string items = 1;
  }

  map<string, Values> items = 1;
}
